# rust_enum

./: LICENSE  README.md  pyproject.toml  rust_enum.py  setup.py
src/rust_enum/: __init__.py  enum.py  option.py  result.py
tests/: test_enums.py
