[project]
name = "rust_enum"
version = "1.1.7"
description = "Rust-style enums"
authors = [
    { name = "Nikita Girvel Dobrynin", email = "widauka@ya.ru" },
    { name = "Ion Skalamera", email = "ion1@skalamera.ch" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
